# DTSA-5511-CNN-Cancer-Detection

./: .gitignore  README.md  dtsa_5511_cnn.ipynb  pyproject.toml
